syntax = "proto3";
option java_package = "com.africastalking.proto.sms";

import "com/africastalking/Base.proto";

message MessagesRequest {
    Token token = 1;

    string lastReceivedId = 2;
}

message SubscriptionRequest {
    Token token = 1;

    string shortCode = 2;
    string keyword = 3;
    string lastReceivedId = 4;
    string phoneNumber = 5;
}

message SendRequest {
    Token token = 1;

    string message = 2;
    string from = 3;
    repeated string recipients = 4;
    // bulk
    bool enqueue = 5;
    // premium
    string keyword = 7;
    string linkId = 8;
    int64 retryDurationInHours = 9;
}

service RemoteSMS {
    rpc fetchMessage(MessagesRequest) returns (Response) {}

    rpc fetchSubscription(SubscriptionRequest) returns (Response) {}
    rpc createSubscription(SubscriptionRequest) returns (Response) {}

    rpc send(SendRequest) returns (Response) {}
    rpc sendBulk(SendRequest) returns (Response) {}
    rpc sendPremium(SendRequest) returns (Response) {}
}
